--- a/stories/MewDropdown/MewDropdown.mdx
+++ b/stories/MewDropdown/MewDropdown.mdx
@@ -1,16 +1,19 @@
-
-import { Story, Preview, Props } from '@storybook/addon-docs/blocks';
-import MewDropdown from '@/components/MewDropdown/MewDropdown.vue';
-import './../GlobalStorybook.scss'
+import { Story, Preview, Props } from "@storybook/addon-docs";
+import MewDropdown from "@/components/MewDropdown/MewDropdown.vue";
+import "./../GlobalStorybook.scss";
 
 # MEW Dropdown
+
 `<mew-dropdown />`
 
 ## Overview
+
 The mew-dropdown component pops up a custom card that is activated by a button. The card will also open if the prop **isOpened** is set to true.
 The activator button text is set by the slot name **activatorBtnText**.
 The content of the card is customizable and uses the slot **cardContent** to place styles and text. The **popupTitle** prop is optional but will display
-as the header if a string is passed. 
-<Props of={MewDropdown} />
-<Preview><Story id="mewdropdown--mew-dropdown" /></Preview>
+as the header if a string is passed.
 
+<Props of={MewDropdown} />
+<Preview>
+  <Story id='mewdropdown--mew-dropdown' />
+</Preview>
