--- a/stories/MewMenuPopup/MewMenuPopup.mdx
+++ b/stories/MewMenuPopup/MewMenuPopup.mdx
@@ -1,14 +1,18 @@
-
-import { Story, Preview, Props } from '@storybook/addon-docs/blocks';
-import MewMenuPopup from '@/components/MewMenuPopup/MewMenuPopup.vue';
-import './../GlobalStorybook.scss'
+import { Story, Preview, Props } from "@storybook/addon-docs";
+import MewMenuPopup from "@/components/MewMenuPopup/MewMenuPopup.vue";
+import "./../GlobalStorybook.scss";
 
 # MEW Menu Popup
+
 `<mew-menu-popup />`
 
 ## Overview
-MEW Menu component replaces Vuetifys v-menu to fix mobile bugs.
-## Props
-<Props of={MewMenuPopup} />
-<Preview><Story id="mewmenupopup--mew-menu-popup" /></Preview>
 
+MEW Menu component replaces Vuetifys v-menu to fix mobile bugs.
+
+## Props
+
+<Props of={MewMenuPopup} />
+<Preview>
+  <Story id='mewmenupopup--mew-menu-popup' />
+</Preview>
