--- a/stories/MewTransformHash/MewTransformHashDoc.mdx
+++ b/stories/MewTransformHash/MewTransformHashDoc.mdx
@@ -1,17 +1,24 @@
-import { Props, Story, Preview } from '@storybook/addon-docs/blocks'
-import MewTransformHash from '@/components/MewTransformHash/MewTransformHash.vue';
-import './../GlobalStorybook.scss'
+import { Props, Story, Preview } from "@storybook/addon-docs";
+import MewTransformHash from "@/components/MewTransformHash/MewTransformHash.vue";
+import "./../GlobalStorybook.scss";
 
-# MEW Transform Hash 
+# MEW Transform Hash
+
 `<mew-transform hash />`
 
 ## Overview
+
 MEW transform hash component is used to truncate hashes. All you have to do is pass a string to the **hash** prop. The **justifyStart**
 prop will change the positioning of the component.
+
 <br />
 
 ## Props
+
 <Props of={MewTransformHash} />
 
 ## Example
-<Preview><Story id="mewtransformhash--mew-transform-hash" /></Preview>
+
+<Preview>
+  <Story id='mewtransformhash--mew-transform-hash' />
+</Preview>
