--- a/stories/MewBanner/MewBanner.mdx
+++ b/stories/MewBanner/MewBanner.mdx
@@ -1,23 +1,30 @@
-
-import { Story, Preview, Props } from '@storybook/addon-docs/blocks';
-import MewBanner from '@/components/MewBanner/MewBanner.vue';
-import './../GlobalStorybook.scss'
+import { Story, Preview, Props } from "@storybook/addon-docs";
+import MewBanner from "@/components/MewBanner/MewBanner.vue";
+import "./../GlobalStorybook.scss";
 
 # MEW Banner
+
 `<mew-banner />`
 
 ## Overview
-MEW Banner is used in the dapps module. It acts as a dapp’s screen header. 
-The action close button will emit an event, **closeBanner**. The **bannerImg** prop is used to show the dapp image and 
-if the image is not passed, the default MEW picture will be displayed. 
+
+MEW Banner is used in the dapps module. It acts as a dapp’s screen header.
+The action close button will emit an event, **closeBanner**. The **bannerImg** prop is used to show the dapp image and
+if the image is not passed, the default MEW picture will be displayed.
 
 There is also a **textObj** prop that is used to display text on the banner. It contains the following attributes: <br />
 **title**: this value is used to display the Dapp’s Name. <br />
 **subtext**: this value is used to display a short sentence description about the dapp. <br />
 **exit**: this value is used to replace the action button text. The default value is 'Exit Dapp'. <br />
-<b>Codepen</b>: <a target="_blank" href="https://codepen.io/gesseekur/pen/JjGOxBa" id="Bar">Click here</a>
+
+<b>Codepen</b>:
+<a target='_blank' href='https://codepen.io/gesseekur/pen/JjGOxBa' id='Bar'>
+  Click here
+</a>
 
 ## Props
-<Props of={MewBanner} />
-<Preview><Story id="mewbanner--mew-banner" /></Preview>
 
+<Props of={MewBanner} />
+<Preview>
+  <Story id='mewbanner--mew-banner' />
+</Preview>
