--- a/stories/MewButton/MewButton.mdx
+++ b/stories/MewButton/MewButton.mdx
@@ -1,45 +1,58 @@
-import { Props, Story, Preview } from '@storybook/addon-docs/blocks'
-import MewButton from '@/components/MewButton/MewButton.vue';
-import './../GlobalStorybook.scss'
+import { Props, Story, Preview } from "@storybook/addon-docs";
+import MewButton from "@/components/MewButton/MewButton.vue";
+import "./../GlobalStorybook.scss";
 
-# MEW Button 
+# MEW Button
+
 `<mew-button />`
 
 ## Overview
 
-The mew-button component replaces the Vuetify v-btn with acceptable MEW theme options. This is a flex component with with different sizes (small, medium, large, xlarge), centered text, and a font size of 14px. 
-MEW button color theme options include: primary, secondary, basic, error, royal (blue500). 
+The mew-button component replaces the Vuetify v-btn with acceptable MEW theme options. This is a flex component with with different sizes (small, medium, large, xlarge), centered text, and a font size of 14px.
+MEW button color theme options include: primary, secondary, basic, error, royal (blue500).
 
 ## Props
+
 <Props of={MewButton} />
 
 # Button Styles
 
-<br/>
+<br />
 
 ## I. Background
 
 btn-style=”background”
 
 This is a default button with a default primary colorTheme. It inherits the background color from the colorTheme prop with white text.
-<Preview><Story id="mewbutton--background-button" /></Preview>
+
+<Preview>
+  <Story id='mewbutton--background-button' />
+</Preview>
 
 ## II. Outline
 
 btn-style=”outline”
 
-Outlined buttons inherit their borders and text color from the colorTheme prop with a transparent background. 
+Outlined buttons inherit their borders and text color from the colorTheme prop with a transparent background.
 
-<Preview><Story id="mewbutton--outline-button" /></Preview>
-
+<Preview>
+  <Story id='mewbutton--outline-button' />
+</Preview>
 
 ## III. Transparent
+
 btn-style=”transparent”
 
 Transparent Buttons only have text, no box shadow, and no background color. The button’s container will be shown only when hovered. The text Color is inherited from the colorTheme prop.
 
-<Preview><Story id="mewbutton--transparent-button" /></Preview>
+<Preview>
+  <Story id='mewbutton--transparent-button' />
+</Preview>
 
 # Slot
+
 If there is no title prop passed, then please use slot to input custom content. Click "Show Code" for an example.
-<Preview><Story id="mewbutton--slot-button" /></Preview>
+
+<Preview>
+  <Story id='mewbutton--slot-button' />
+</Preview>
