--- a/stories/MewIcon/MewIcon.mdx
+++ b/stories/MewIcon/MewIcon.mdx
@@ -1,14 +1,17 @@
+import { Story, Preview, Props } from "@storybook/addon-docs";
+import MewIcon from "@/components/MewIcon/MewIcon.vue";
+import "./../GlobalStorybook.scss";
 
-import { Story, Preview, Props } from '@storybook/addon-docs/blocks';
-import MewIcon from '@/components/MewIcon/MewIcon.vue';
-import './../GlobalStorybook.scss'
+# MEW Icon
 
-# MEW Icon 
 `<mew-icon />`
 
 ## Overview
+
 The mew-icon component is used to display the unique MEW icons that you see below. All you have to do is pass the name of the icon
 to the **iconName** prop. You may adjust the height by passing a number to **imgHeight**.
-<Props of={MewIcon} />
-<Preview><Story id="mewicon--mew-icon" /></Preview>
 
+<Props of={MewIcon} />
+<Preview>
+  <Story id='mewicon--mew-icon' />
+</Preview>
