--- a/stories/MewSheet/MewSheet.mdx
+++ b/stories/MewSheet/MewSheet.mdx
@@ -1,17 +1,20 @@
-
-import { Story, Preview, Props } from '@storybook/addon-docs/blocks';
-import MewSheet from '@/components/MewSheet/MewSheet.vue';
-import './../GlobalStorybook.scss'
+import { Story, Preview, Props } from "@storybook/addon-docs";
+import MewSheet from "@/components/MewSheet/MewSheet.vue";
+import "./../GlobalStorybook.scss";
 
 # MEW Sheet
+
 `<mew-sheet />`
 
 ## Overview
+
 The MEW sheet component uses Vuetify's v-sheet but with MEW theme styles.
 It is mainly used as a container with a specific box shadow and border radius. There is a default
-slot that is used to display the customized content. 
+slot that is used to display the customized content.
 
 ## Props
-<Props of={MewSheet} />
-<Preview><Story id="mewsheet--mew-sheet" /></Preview>
 
+<Props of={MewSheet} />
+<Preview>
+  <Story id='mewsheet--mew-sheet' />
+</Preview>
