--- a/stories/MewTable/MewTable.mdx
+++ b/stories/MewTable/MewTable.mdx
@@ -1,23 +1,25 @@
-
-import { Story, Preview, Props } from '@storybook/addon-docs/blocks';
-import MewTable from '@/components/MewTable/MewTable.vue';
-import './../GlobalStorybook.scss'
+import { Story, Preview, Props } from "@storybook/addon-docs";
+import MewTable from "@/components/MewTable/MewTable.vue";
+import "./../GlobalStorybook.scss";
 
 # MEW Table
+
 `<mew-table />`
 
 ## Overview
+
 The MEW table component uses Vuetify's v-data-table but is customized with MEW theme styles.
-The **hasColor** prop changes the tables background color to *superPrimary darken1* and the **hasSelect** prop
+The **hasColor** prop changes the tables background color to _superPrimary darken1_ and the **hasSelect** prop
 will add a checkbox to each row. The events **selectedAll** or **selectedRow** will be emitted with the item when
 the checkboxes are selected. There are different style customizations for the following values:
- toggle, txHash, token, change, balance, callToAction, and 
-address. All you have to do is pass the value and attribute to **tableHeaders** and **tableData**. If you would like to 
+toggle, txHash, token, change, balance, callToAction, and
+address. All you have to do is pass the value and attribute to **tableHeaders** and **tableData**. If you would like to
 utilize the skeleton loading state then you must pass the **loading** prop and you must pass an empty array
 to **tableData**.
 
-
 ## Props
-<Props of={MewTable} />
-<Preview><Story id="mewtable--mew-table" /></Preview>
 
+<Props of={MewTable} />
+<Preview>
+  <Story id='mewtable--mew-table' />
+</Preview>
