--- a/stories/MewToggle/MewToggle.mdx
+++ b/stories/MewToggle/MewToggle.mdx
@@ -1,23 +1,24 @@
-
-import { Story, Preview, Props } from '@storybook/addon-docs/blocks';
-import MewToggle from '@/components/MewToggle/MewToggle.vue';
-import './../GlobalStorybook.scss'
+import { Story, Preview, Props } from "@storybook/addon-docs";
+import MewToggle from "@/components/MewToggle/MewToggle.vue";
+import "./../GlobalStorybook.scss";
 
 # MEW Toggle
+
 `<mew-toggle />`
 
 ## Overview
-The MEW Toggle Button component is a group of buttons used to filter specific data to the user. 
+
+The MEW Toggle Button component is a group of buttons used to filter specific data to the user.
 It is mainly used to filter dates and percentages.
- It takes 2 props: **buttonType** and **buttonGroup**. There are 3 possible button types, which are custom, default, and percentage. 
- *Default* is used to filter dates, and it has a blue background (named `blue500` in the MEW color palette) during the active state. 
- *Percentage* is used to filter out percentages of a value and shows a green border (named `primary` in the MEW color palette) during the active state.
-  *Custom* is selected when a user wants to use a custom button style, and it is created by using slots (**btn** + **number of btn**), i.e. *btn1*. The **buttonGroup** prop
-   is used to pass the title for each button. It takes an array of strings. 
-
-
+It takes 2 props: **buttonType** and **buttonGroup**. There are 3 possible button types, which are custom, default, and percentage.
+_Default_ is used to filter dates, and it has a blue background (named `blue500` in the MEW color palette) during the active state.
+_Percentage_ is used to filter out percentages of a value and shows a green border (named `primary` in the MEW color palette) during the active state.
+_Custom_ is selected when a user wants to use a custom button style, and it is created by using slots (**btn** + **number of btn**), i.e. _btn1_. The **buttonGroup** prop
+is used to pass the title for each button. It takes an array of strings.
 
 ## Props
-<Props of={MewToggle} />
-<Preview><Story id="mewtoggle--mew-toggle" /></Preview>
 
+<Props of={MewToggle} />
+<Preview>
+  <Story id='mewtoggle--mew-toggle' />
+</Preview>
